cmake_minimum_required(VERSION 3.0)
project(FastCSVParser)
SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_STANDARD_REQUIRED true)
SET(INCLUDE_DIR ${CMAKE_SOURCE_DIR}/include)
aux_source_directory(./src SRC)
link_directories($ENV{ANTLR4_LIB} $ENV{BOOST_LIB})
add_executable(${PROJECT_NAME} ${SRC})
target_include_directories(${PROJECT_NAME} PUBLIC ${INCLUDE_DIR} $ENV{BOOST_INC})
target_link_libraries(${PROJECT_NAME} $ENV{BOOST_LIB} boost_filesystem-mt)
